assets/style.css
/* Colors */
html {background-color: #1ba100; color: white; font-family: sans-serif; font-size: 18px; line-height: 1.5;}
a {color: inherit;}
header a {text-decoration: none;}
header h1 {line-height: 1.2;}
main {background-color: white; color: black; overflow: auto;}
main a {color: #006aff;}
a:hover, a:focus {text-decoration: underline;}
.error {color: #d00;} /* TODO pick a good color */
@media (prefers-color-scheme: dark) {
    html {background-color: black; color: #1ba100;}
    main {background-color: transparent; color: white;}
    /*
    NOTE: If you want to recolor the social links, use https://codepen.io/sosuke/pen/Pjoqqp
    Remember that the images aren't black by default; you'll need the extra filter code
    */
}

/* Headers */
section {
    margin-top: 1em;
    margin-bottom: 1em;
}
h1, p {
    margin-top: 0;
}
div.container>p:last-child, div.container>:last-child>p:last-child {margin-bottom: 0;}
h1 {font-weight: bold; font-size: 2em;}
h2 {font-weight: bold; font-size: 1.8em;}
h3 {font-weight: bold; font-size: 1.55em;}
h4 {font-weight: bold; font-size: 1.35em;}
h5 {font-weight: bold; font-size: 1.2em;}
h6 {font-weight: bold; font-size: 1em;}

/* Layout */
html {width: 100%; height: 100%; margin: 0;}
body {width: 100%; min-height: 100%; margin: 0; display: flex; flex-direction: column; box-sizing: border-box;}
main {
    flex: 1 0 auto;
    display: flex;
    flex-direction: row;
}

.container-outer {
    padding-left: env(safe-area-inset-left);
    padding-right: env(safe-area-inset-right);
}
.container-outer:first-child {
    padding-top: env(safe-area-inset-top);
}
.container-outer:last-child {
    padding-bottom: env(safe-area-inset-bottom);
}
.container {
    box-sizing: border-box;
    max-width: 1200px;
    margin: 0 auto;
    padding: 18px;
}
main>.container {
    flex-grow: 1;
}

/* Header */
#site-header .container {display: flex; flex-direction: column; align-items: stretch; justify-content: space-between;}
#site-header h1 {font-size: 2em; margin: 0;}
#site-header nav {display: flex; flex-direction: row; align-items: center; margin-top: 10px;}
#site-header nav>*:not(:first-child) {margin-left: 15px;}

/* Footer */
footer {text-align: center;}

/* Misc styles used on various pages */
.post-title {margin-bottom: 0;}
.copyright {font-size: 0.7em;}
a.social {display: inline-block; text-decoration: none !important; margin-left: 10px; margin-right: 10px;}
.social img {width: 32px; height: 32px;}
img {width: 100%; max-width: 100%; height: auto;}
input, button, select, textarea {font-size: 100%; font: inherit;}
input {width: 20em;}
textarea {width: 100%; box-sizing: border-box; height: 10em; resize: none;}
.programming-languages {display: flex; flex-direction: row; flex-wrap: wrap; justify-content: center; text-align: center;}
.programming-languages img, .programming-languages picture {width: 100%; aspect-ratio: 1; object-fit: contain;}
.programming-languages img {padding-bottom: 10px;}
.programming-languages picture img {display: block; /* fixes weird spacing stuff */}
.programming-languages>div {width: 80px; object-fit: contain; margin: 18px; display: flex; flex-direction: column; align-items: center; font-size: 80%;}
.project-list-item>img {width: 80px; max-height: 80px; object-fit: contain;}
.project-list-item>:last-child, .project-list-item>:last-child>:last-child {margin-bottom: 0; padding-bottom: 0;}
.project-list-item {margin-bottom: 1em;}

/* Desktop */
@media screen and (min-width:600px) {
    #site-header .container {
        flex-direction: row;
    }
    #site-header nav {
        margin-top: 0;
    }

    /* These should only ever be used together. */
    .two-column-container {
        display: flex;
        flex-direction: row;
        align-items: top;
    }
    .two-column-container-middle {
        display: flex;
        flex-direction: row;
        align-items: center;
    }
    .left-column {
        width: 50%;
        padding-right: 9px;
        box-sizing: border-box;
        order: 0;
        display: flex;
        flex-direction: column;
    }
    .right-column {
        width: 50%;
        padding-left: 9px;
        box-sizing: border-box;
        order: 1;
        display: flex;
        flex-direction: column;
    }

    .project-list {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
    }
    .project-list-item {
        display: flex;
        flex-direction: row;
    }
    .project-list-item>img {
        min-width: 80px;
        padding-right: 20px;
    }
    .project-list-item>p, .project-list-item>div {
        flex-grow: 1;
    }
}

